--- a/src/styles/TodoCard.css
+++ b/src/styles/TodoCard.css
@@ -23,3 +23,19 @@
     color: white;
     padding-right: 8px;
 }
+
+.onHover {
+    transition: all 300ms !important
+}
+
+.onHover:hover {
+    background-color: rgba(231, 230, 230, 0.637) !important;
+}
+
+.card {
+    transition: all 300ms
+}
+
+.card:hover {
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 0, 0.2)
+}
