--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,13 +7,10 @@
 
 
 #root {
-  /* width: 100%; */
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin: 0%; */
-  /* padding: 0%; */
   font-family: "Tajawal", sans-serif;
 }
 
@@ -27,7 +24,7 @@
   width: 600px;
   border-radius: 8px;
   padding: 16px;
-  margin-top: 5%;
-  margin-bottom: 5%;
   box-shadow: 0px 0px 0px 5px rgba(128, 128, 128, 0.75);
+  max-height: 70vh;
+  overflow: auto;
 }
