--- a/src/styles/TodoCard.css
+++ b/src/styles/TodoCard.css
@@ -22,6 +22,7 @@
     font-size: x-large;
     color: white;
     padding-right: 8px;
+
 }
 
 .onHover {
@@ -38,4 +39,8 @@
 
 .card:hover {
     box-shadow: 0px 0px 0px 5px rgba(0, 0, 0, 0.2)
+}
+
+.todoText {
+    text-decoration: line-through;
 }
