--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,7 +7,7 @@
 
 
 #root {
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,6 +25,6 @@
   border-radius: 8px;
   padding: 16px;
   box-shadow: 0px 0px 0px 5px rgba(128, 128, 128, 0.75);
-  max-height: 70vh;
-  overflow: auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
